v1.99.3
	New Features:
		- Added diffTable() method to return a table of differential results broken out by pairwise comparison. (more human-readable)
		- Added sigMatrix() method to CuffSet objects to draw heatmap showing number of significant genes by pairwise comparison at a given FDR.
	Bugfixes:
		- Fixed diffData 'features' argument so that it now does what it's supposed to do.
		- added DB() with signature(object="CuffSet") to NAMESPACE
		
v1.99.2
	Bugfixes:
		- Fixed bug in replicate table that did not apply make.db.names to match samples table.
		- Fixed bug for missing values in *.count_tracking files.
		- Now correctly applying make.db.names to *.read_group_tracking files.
		- Now correctly allows for empty *.count_tracking and *.read_group_tracking files

v1.99.1
	- This represents a major set of improvements and feature additions to cummeRbund.
	- cummeRbund now incorporates additional information emitted from cuffdiff 2.0 including:
		- run parameters and information.
		- sample-level information such as mass and scaling factors.
		- individual replicate fpkms and associated statistics for all features.
		- raw and normalized count tables and associated statistics all features.
	
	New Features:
		- Please see updated vignette for overview of new features.
		- New dispersionPlot() to visualize model fit (mean count vs dispersion) at all feature levels.
		- New runInfo() method returns cuffdiff run parameters.
		- New replicates() method returns a data.frame of replicate-level parameters and information.
		- getGene() and getGenes() can now take a list of any tracking_id or gene_short_name (not just gene_ids) to retrieve
		a gene or geneset. 
		- Added getFeatures() method to retrieve a CuffFeatureSet independent of gene-level attributes.  This is ideal for looking at sets of features
		outside of the context of all other gene-related information (i.e. facilitates feature-level analysis)
		- Replicate-level fpkm data now available.